--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -12,6 +12,7 @@ nav.navbar{
     top: 0;
     left: 0;
     right: 0;
+    padding: 20px;
 }
 .navbar-brand{
     text-decoration: none;
@@ -74,3 +75,35 @@ a.nav-link{
     padding: 5px;
     outline: none;
 }
+.cerrar-popup{
+    display: none;
+}
+.item-agregado{
+    display: flex;
+    justify-content:space-between;
+    width: 500px;
+    padding: 20px;
+    align-items: center;
+    border-radius: 12px;
+    color: #ffff;
+    position: absolute;
+    top: 120px;
+    right: 0;
+    left: 0;
+    margin: auto;
+    background-color: #192b6ede;
+    cursor: pointer;
+    /* visibility: hidden; */
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+  }
+
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0;} 
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
