--- a/src/styles/carrito.css
+++ b/src/styles/carrito.css
@@ -25,6 +25,9 @@ li{
   justify-content: center;
   border: solid, 1px, #f1f1f1 ;
 }
+.fila{
+  padding: 15px;
+}
 .fila-carrito{
   display: flex;
   justify-content: space-between;
@@ -32,7 +35,7 @@ li{
   width: 400px;
   background-color: #101d4be3;
   border:solid 1px #c4c2c2;
-  margin: 20px;
+  margin: 10px;
 }
 .fila-imagen{
   margin: 10px;
@@ -57,8 +60,10 @@ li{
   color: #f1f1f1;
   background-color: #101d4be3;
   width: 300px;
-  margin: 20px;
- /*  border:solid 1px #c4c2c2; */
+  height: fit-content;
+  margin: 25px 25px 25px 5px;
+  padding: 15px;
+  border:solid 1px #c4c2c2;
 }
 
 .resumen-titulo{
