--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,17 +7,20 @@ li{
 .eliminar{
   margin-left: 10px;
 }
-.boton-agregar{
+button.boton-agregar{
   color: #ffff;
-  background-color: #007AFF;
+  background-color: #003cff;
   border: none;
   border-radius: 6px;
-  margin-top: 15px;
+  width: 90%;
+  margin: 15px 10px 0 10px;
   padding: 5px;
   outline: none;
+  font-size: 16px;
 }
-.boton-agregar:active{
-  background-color: #0352a7;
+button.boton-agregar:active, button.boton-agregar:hover{
+  background-color: #042eb6;
+  cursor: pointer;
 }
 
 .boton-eliminar{
@@ -31,6 +34,7 @@ li{
 }
 .container1{
   margin-top: 150px;
+  margin-bottom: 150px;
   display: flex;
   flex-direction: row;
   max-width: 100vw;
@@ -54,8 +58,11 @@ li{
   flex-direction: column;
   width: 200px;
   margin: 20px;
+  padding-bottom: 10px;
   color: #f1f1f1;
+  background-color:rgba(255, 255, 255, 0.082);
 }
+
 .card-img{
   display: block;
   width: 200px;
@@ -63,10 +70,24 @@ li{
   margin-left: auto;
   margin-right: auto;
 }
+
 .card-title, .card-text{
   margin: 5px;
+  width:200px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow:hidden;
+ 
+  
 }
-
+.card-title{
+  font-size: 16px;
+}
+.card-price{
+  color: #ffff;
+  background-color: #0b159e;
+  text-align: center;
+}
 #carrito{
   margin-left: 6px;
 }
@@ -80,12 +101,12 @@ li{
   cursor: pointer;
 }
 
-/* Dropdown button on hover & focus */
+
 .dropbtn:hover, .dropbtn:focus {
   background-color: #1c1f22;
 }
 
-/* The container <div> - needed to position the dropdown content */
+
 .dropdown {
   position: relative;
   display: inline-block;
@@ -128,7 +149,6 @@ li{
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #ddd}
 
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
 
 
