--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -13,7 +13,17 @@ ul.pagination{
    /*  border:solid 1px darkgray; */
     padding: 2px;
 }
-
+.page-link-current{
+    background-color: #007AFF;
+    color: #ffff;
+    border-radius: 50%;
+    padding: 10px 18px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 .page-link{
     background-color: #101d4d;
     color: #ffff;
@@ -41,7 +51,7 @@ ul.pagination{
     margin: 5px;
 }
 
-.page-link:hover{
+.page-link:hover, .page-link-arrows:hover{
     background-color:#007AFF;
 }
 .page-link:focus{
