--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -47,6 +47,7 @@ a.nav-link{
 }
 .dropbtn:hover{
     background-color: #3845ff;
+    transition: .2s border ease-in-out, .2s background ease-in-out, .2s color ease-in-out;
 }
 .navbar-nav{
     display: flex;
